syntax = "proto3";
package server;
option go_package = "github.com/mjcastner/go-home/protos/server_proto";

import "protos/link.proto";

message LinkBatch {
  repeated Link links = 1;
}

message LinkRequest {
  string name = 1;
}

message LinkRequestBatch {
  repeated string names = 1;
}

message LinkResponse {
  enum ResponseCode {
    SUCCESS = 0;
    FAILED = 1;
  }

  ResponseCode code = 1;
}

service GoHome {
  rpc BatchGet (LinkRequestBatch) returns (LinkBatch) {}
  rpc BatchSet (LinkBatch) returns (LinkResponse) {}
  rpc Get (LinkRequest) returns (Link) {}
  rpc Set (Link) returns (LinkResponse) {}
  rpc Delete (LinkRequest) returns (LinkResponse) {}
}